--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ html {
   -webkit-text-size-adjust: 100%;
   -o-tab-size: 4;
   tab-size: 4;
-  font-family: Inter var, ui-sans-serif, system-ui, -apple-system,
+  font-family: Hind Siliguri, ui-sans-serif, system-ui, -apple-system,
     BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans,
     sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol,
     Noto Color Emoji;
@@ -18,4 +18,19 @@ body {
   margin: 0;
   padding: 0;
   line-height: inherit;
+}
+
+.backGroundGrid {
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  height: calc(100vh);
+  background: transparent;
+  background-image: linear-gradient(
+      0,
+      rgba(80, 80, 80, 0.041) 0.05em,
+      transparent 0.05em
+    ),
+    linear-gradient(90deg, rgba(80, 80, 80, 0.096) 0.05em, transparent 0.05em);
+  background-size: 1.2em 1.2em;
 }
