--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,6 @@ html {
 body {
   margin: 0;
   padding: 0;
-  line-height: inherit;
 }
 
 .backGroundGrid {
@@ -33,4 +32,22 @@ body {
     ),
     linear-gradient(90deg, rgba(80, 80, 80, 0.096) 0.05em, transparent 0.05em);
   background-size: 1.2em 1.2em;
+}
+
+.flip-box {
+  background-color: transparent;
+  perspective: 1000px;
+}
+
+.flip-box-inner {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  text-align: center;
+  transition: transform 1s;
+  transform-style: preserve-3d;
+}
+
+.flip-box-inner:hover {
+  transform: rotateY(-45deg);
 }
